--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -15,7 +15,7 @@ suites:
   - recipe[debian]
   - recipe[postgresql::ruby]
   - recipe[postgresql::server]
-  - recipe[pdns::default_test]
+  - recipe[pdns_test::default]
   - recipe[pdns::backup]
   - recipe[minitest-handler]
   encrypted_data_bag_secret_key_path: test/integration/secret_key
@@ -23,6 +23,7 @@ suites:
     pdns:
       axfr_ips:
       - "192.168.1.200"
+      - "192.168.1.201"
       db_password: "pdns"
       backup:
         repository: "https://gist.github.com/a59c16a1c595e061c314.git"
